# garpyclient

./: README.md  README.rst  pyproject.toml
.github/workflows/: test.yml
garpyclient/: __init__.py  client.py  settings.py
garpyclient/resources/: default_config.yaml
tests/: conftest.py  test_client.py
