[tool.poetry]
name = "garpyclient"
version = "0.1.0"
description = "Python client for downloading activities from Garmin Connect"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/felipeam86/garpyclient"

[tool.poetry.dependencies]
python = "^3.7.9"
requests = "^2.22"
attrs = "^21.4.0"
PyYAML = ">=5.1,<7.0"
cloudscraper =  { version = "^1.2.58", optional = true }

[tool.poetry.extras]
cloudscraper = ["cloudscraper"]

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0"
black = "^22.12.0"
isort = "^5.11.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
